# BASIN

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PRODUCT_PLAN.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  first-public-run.yml
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/editorial/: citation-auditor.md  numeracy-checker.md  scope-keeper.md
.roles/panel-reviewer/: panel.md
.roles/parliament/: basin-planner.md  drought-resilience-hydrologist.md  environmental-flow-advocate.md  equity-access-advocate.md  hydraulic-engineer.md  water-economist.md  water-rights-realist.md
.roles/stakeholders/: agricultural-irrigator.md  downstream-user.md  household-ratepayer.md  municipal-utility.md  tribal-water-rights.md
context/waves/: PHASES.md
context/waves/2026-06-26-basin-implementation/: WAVE.md
context/waves/2026-06-26-vtrace-foundation/: WAVE.md
corpus/: SCHEMA.md
crates/basin-cli/: Cargo.toml
crates/basin-cli/src/: main.rs
crates/basin-corpus/: Cargo.toml
crates/basin-corpus/src/: lib.rs
crates/basin-gap/: Cargo.toml
crates/basin-gap/src/: lib.rs
crates/basin-network/: Cargo.toml
crates/basin-score/: Cargo.toml
crates/basin-tier/: Cargo.toml  tiers.toml
crates/basin-tier/src/: lib.rs
data/: sources.md
docs/adoption/: README.md  first-public-run-worksheet.md
docs/vtrace/: ARCHITECTURE.md  CODE_RIGOR.md  CONOPS.md  IMPLEMENTATION_PLAN.md  INTERFACES.md  MISSION.md  REQUIREMENTS.md  REVIEW.md  SPECIFICATION_BASELINE.md  TRACE.md  VERIFICATION.md  WORK_PACKAGES.md
(+20 files in other folders)
