[package]
name = "basin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "basin"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
basin-corpus = { path = "../basin-corpus" }
basin-gap = { path = "../basin-gap" }
basin-score = { path = "../basin-score" }
basin-tier = { path = "../basin-tier" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
